syntax = "proto3";

import "google/protobuf/timestamp.proto";

package currency;

option go_package = "pkg/currency";

service Currency {
  rpc GetRate(GetRateRequest) returns (GetRateResponse);
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
}

message GetHistoryRequest {
  string baseCurrency = 1;
  string targetCurrency = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}

message GetHistoryResponse {
  repeated Rate rates = 1;
}

message GetRateRequest {
  string baseCurrency = 1;
  string targetCurrency = 2;
}

message GetRateResponse {
  Rate rate = 1;
}

message Rate {
  google.protobuf.Timestamp date = 1;
  double rate = 2;
}